# everytimeyouvisitawebsite

./: .gitignore  app.py  camera.py  main.py  pyproject.toml  setup.py
static/css/: styling.css
static/js/: beacon.js
templates/: dashboard.html  gone.html  index.html
